Bug 204644 - Using char* instead of String for StyleProperties::getShorthandValue()
Summary: Using char* instead of String for StyleProperties::getShorthandValue()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Manuel Rego Casasnovas
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2019-11-27 07:08 PST by Manuel Rego Casasnovas
Modified: 2019-11-27 15:08 PST (History)
10 users (show)

See Also:


Attachments
Patch (2.52 KB, patch)
2019-11-27 07:08 PST, Manuel Rego Casasnovas
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Manuel Rego Casasnovas 2019-11-27 07:08:23 PST
Using char* instead of String for StyleProperties::getShorthandValue()
Comment 1 Manuel Rego Casasnovas 2019-11-27 07:08:38 PST
Created attachment 384411 [details]
Patch
Comment 2 WebKit Commit Bot 2019-11-27 15:07:53 PST
Comment on attachment 384411 [details]
Patch

Clearing flags on attachment: 384411

Committed r252913: <https://trac.webkit.org/changeset/252913>
Comment 3 WebKit Commit Bot 2019-11-27 15:07:55 PST
All reviewed patches have been landed.  Closing bug.
Comment 4 Radar WebKit Bug Importer 2019-11-27 15:08:22 PST
<rdar://problem/57510642>