Using char* instead of String for StyleProperties::getShorthandValue() https://bugs.webkit.org/show_bug.cgi?id=204644

Reviewed by Darin Adler.

This is follow-up patch for r252901. We don't need to create a String object
just for the separator and can use char* instead.
This was suggested by Darin Adler in webkit.org/b/204508.

* css/StyleProperties.cpp:
(WebCore::StyleProperties::getShorthandValue const):
* css/StyleProperties.h:


Canonical link: https://commits.webkit.org/217886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252913 268f45cc-cd09-0410-ab3c-d52691b4dbfc